NetBSD Problem Report #15802
Received: (qmail 19517 invoked from network); 4 Mar 2002 07:52:37 -0000
Message-Id: <20020304075239.09DFA11119@www.netbsd.org>
Date: Sun, 3 Mar 2002 23:52:39 -0800 (PST)
From: mrt@notwork.org
Sender: nobody@netbsd.org
Reply-To: mrt@notwork.org
To: gnats-bugs@gnats.netbsd.org
Subject: libc encodes/decodes wrong rpc packet of RPCBPROC_GETSTAT.
X-Send-Pr-Version: www-1.0
>Number: 15802
>Category: lib
>Synopsis: libc encodes/decodes wrong rpc packet of RPCBPROC_GETSTAT.
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: lib-bug-people
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Mon Mar 04 07:53:00 +0000 2002
>Closed-Date: Tue Sep 05 01:30:23 +0000 2017
>Last-Modified: Tue Sep 05 01:30:23 +0000 2017
>Originator: Murata, Shuuichirou
>Release: NetBSD 1.5ZA
>Organization:
ASTEC, Inc.
>Environment:
NetBSD tanaquil 1.5ZA NetBSD 1.5ZA (TANAQUIL) #73: Sat Mar 2 16:34:59 JST 2002
mrt@tanaquil:/usr/src/sys/arch/i386/compile/TANAQUIL i386
>Description:
Currnet implementation of rpc library in libc encodes/decodes wrong rpc
packet of RPCBPROC_GETSTAT of rpcbind4.
RFC 1833 requires rpcbs_rmtcalllist_ptr as fifth element of struct
rpcb_stat, but NetBSD's doesn't have this.
Thus, NetBSD's "rpcinfo -m" cannot talk to Solaris's rpcbind and vice
versa.
>How-To-Repeat:
On NetBSD, do "rpcinfo -m" to another implementation of rpcbind4 (such
as Solaris).
>Fix:
Apply following. (Sorry for tab <-> space conversion)
Index: rpcb_st_xdr.c
===================================================================
RCS file: /cvs/cvsroot/basesrc/lib/libc/rpc/rpcb_st_xdr.c,v
retrieving revision 1.5
diff -u -r1.5 rpcb_st_xdr.c
--- rpcb_st_xdr.c 2001/01/04 14:57:17 1.5
+++ rpcb_st_xdr.c 2002/03/04 07:40:51
@@ -262,6 +262,9 @@
if (!xdr_rpcbs_addrlist_ptr(xdrs, &objp->addrinfo)) {
return (FALSE);
}
+ if (!xdr_rpcbs_rmtcalllist_ptr(xdrs, &objp->rmtinfo)) {
+ return (FALSE);
+ }
return (TRUE);
}
>Release-Note:
>Audit-Trail:
From: "Brian Ginsbach" <ginsbach@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/15802 CVS commit: src/lib/libc/rpc
Date: Sun, 13 Aug 2017 01:08:41 +0000
Module Name: src
Committed By: ginsbach
Date: Sun Aug 13 01:08:41 UTC 2017
Modified Files:
src/lib/libc/rpc: rpcb_st_xdr.c
Log Message:
PR lib/15802: Shuuichirou Murata: Add missing xdr_rpcbs_rmtcalllist_ptr
There was a missing call to xdr_rpcbs_rmtcalllist_ptr in xdr_rpcb_stat.
This fixes issues with RPCBPROC_GETSTAT not working correctly with
systems that correctly implement the XDR encode/decode routine.
XXX: pullup-8
XXX: pullup-7
XXX: pullup-6
To generate a diff of this commit:
cvs rdiff -u -r1.11 -r1.12 src/lib/libc/rpc/rpcb_st_xdr.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/15802 CVS commit: [netbsd-8] src/lib/libc/rpc
Date: Sun, 20 Aug 2017 04:53:31 +0000
Module Name: src
Committed By: snj
Date: Sun Aug 20 04:53:31 UTC 2017
Modified Files:
src/lib/libc/rpc [netbsd-8]: rpcb_st_xdr.c
Log Message:
Pull up following revision(s) (requested by ginsbach in ticket #213):
lib/libc/rpc/rpcb_st_xdr.c: revision 1.12
PR lib/15802: Shuuichirou Murata: Add missing xdr_rpcbs_rmtcalllist_ptr
There was a missing call to xdr_rpcbs_rmtcalllist_ptr in xdr_rpcb_stat.
This fixes issues with RPCBPROC_GETSTAT not working correctly with
systems that correctly implement the XDR encode/decode routine.
To generate a diff of this commit:
cvs rdiff -u -r1.11 -r1.11.2.1 src/lib/libc/rpc/rpcb_st_xdr.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/15802 CVS commit: [netbsd-6] src/lib/libc/rpc
Date: Thu, 31 Aug 2017 13:43:19 +0000
Module Name: src
Committed By: martin
Date: Thu Aug 31 13:43:19 UTC 2017
Modified Files:
src/lib/libc/rpc [netbsd-6]: rpcb_st_xdr.c
Log Message:
Pull up following revision(s) (requested by ginsbach in ticket #1494):
lib/libc/rpc/rpcb_st_xdr.c: revision 1.12
PR lib/15802: Shuuichirou Murata: Add missing xdr_rpcbs_rmtcalllist_ptr
There was a missing call to xdr_rpcbs_rmtcalllist_ptr in xdr_rpcb_stat.
This fixes issues with RPCBPROC_GETSTAT not working correctly with
systems that correctly implement the XDR encode/decode routine.
XXX: pullup-8
XXX: pullup-7
XXX: pullup-6
To generate a diff of this commit:
cvs rdiff -u -r1.7.46.1 -r1.7.46.2 src/lib/libc/rpc/rpcb_st_xdr.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/15802 CVS commit: [netbsd-7] src/lib/libc/rpc
Date: Mon, 4 Sep 2017 06:15:02 +0000
Module Name: src
Committed By: snj
Date: Mon Sep 4 06:15:02 UTC 2017
Modified Files:
src/lib/libc/rpc [netbsd-7]: rpcb_st_xdr.c
Log Message:
Pull up following revision(s) (requested by ginsbach in ticket #1494):
lib/libc/rpc/rpcb_st_xdr.c: revision 1.12
PR lib/15802: Shuuichirou Murata: Add missing xdr_rpcbs_rmtcalllist_ptr
There was a missing call to xdr_rpcbs_rmtcalllist_ptr in xdr_rpcb_stat.
This fixes issues with RPCBPROC_GETSTAT not working correctly with
systems that correctly implement the XDR encode/decode routine.
To generate a diff of this commit:
cvs rdiff -u -r1.10 -r1.10.8.1 src/lib/libc/rpc/rpcb_st_xdr.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: ginsbach@NetBSD.org
State-Changed-When: Tue, 05 Sep 2017 01:30:23 +0000
State-Changed-Why:
Pullups complete to netbsd-6, netbsd-7, and netbsd-8.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.